@@ -538,16 +538,9 @@
   </property>
 
   <property>
-    <description>Classpath for typical applications.</description>
+    <description>CLASSPATH for YARN applications. A comma-separated list
+    of CLASSPATH entries</description>
      <name>yarn.application.classpath</name>
-     <value>
-        $HADOOP_CONF_DIR,
-        $HADOOP_COMMON_HOME/share/hadoop/common/*,
-        $HADOOP_COMMON_HOME/share/hadoop/common/lib/*,
-        $HADOOP_HDFS_HOME/share/hadoop/hdfs/*,
-        $HADOOP_HDFS_HOME/share/hadoop/hdfs/lib/*,
-        $YARN_HOME/share/hadoop/mapreduce/*,
-        $YARN_HOME/share/hadoop/mapreduce/lib/*
-     </value>
+     <value>$HADOOP_CONF_DIR,$HADOOP_COMMON_HOME/share/hadoop/common/*,$HADOOP_COMMON_HOME/share/hadoop/common/lib/*,$HADOOP_HDFS_HOME/share/hadoop/hdfs/*,$HADOOP_HDFS_HOME/share/hadoop/hdfs/lib/*,$YARN_HOME/share/hadoop/mapreduce/*,$YARN_HOME/share/hadoop/mapreduce/lib/*</value>
   </property>
 </configuration>
